  the debugger won't kill the session.
  (Martin <gzlist@googlemail.com>, #162502)

* Allow additional arguments to
  ``RemoteRepository.add_inventory_by_delta()``. (Jelmer Vernooij, #532631)

* Tolerate patches with leading noise in ``bzr-handle-patch``.
  (Toshio Kuratomi, Martin Pool, #502076)

API Changes
***********

* ``BranchFormat.initialize`` now takes an optional ``name`` of the colocated 
  branch to create. (Jelmer Vernooij)

* ``BzrDir.get_branch_transport`` now takes an optional ``name`` of the 
  colocated branch to open. (Jelmer Vernooij)

* Added ``bzrlib.osutils.set_signal_handler``, a convenience function that
  can set a signal handler and call ``signal.siginterrupt(signum,
  False)`` for it, if the platform and Python version supports it.
  (Andrew Bennetts, #496813)

* New ``bzrlib.initialize`` is recommended for programs using bzrlib to 
  run when starting up; it sets up several things that previously needed
  to be done separately.
  (Martin Pool, #507710)

* Exporters now support a ``per_file_timestamps`` argument to write out the 
  timestamp of the commit in which a file revision was introduced.
  (Jelmer Vernooij)

* New method ``BzrDir.list_branches()`` that returns a sequence of branches 
  present in a control directory. (Jelmer Vernooij)

* New transport methods ``readlink``, ``symlink`` and ``hardlink``.
  (Neil Santos)

* Remove unused ``CommandFailed`` exception.
  (Martin Pool)

Internals
*********

* ``bzrlib.branchbuilder.BranchBuilder.build_snapshot`` now accepts a
  ``message_callback`` in the same way that commit does. (Robert Collins)

* ``bzrlib.builtins.Commit.run`` raises ``bzrlib.errors.BoundBranchOutOfDate``
  rather than ``bzrlib.errors.BzrCommandError`` when the bound branch is out
  of date. (Gary van der Merwe)

* ``bzrlib.commands.run_bzr`` is more extensible: callers can supply the
  functions to load or disable plugins if they wish to use a different